<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_item2"
            android:icon="@drawable/baseline_help_24"
            android:title="@string/nav_tips" />
        <item
            android:id="@+id/nav_item3"
            android:icon="@drawable/baseline_enhanced_encryption_24"
            android:title="@string/nav_why" />
        <item
            android:id="@+id/nav_item4"
            android:icon="@drawable/baseline_visibility_off_24"
            android:title="@string/nav_privacy" />

        <item
            android:id="@+id/nav_switch_to_texts"
            android:icon="@drawable/baseline_enhanced_encryption_24"
            android:title="@string/nav_switch_to_texts" />

        <item
            android:id="@+id/nav_item_backup"
            android:title="@string/nav_backup"
            android:icon="@drawable/ic_backup"/>

        <item
            android:id="@+id/nav_delete_all"
            android:title="@string/nav_delete_all"
            android:iconTint="#FF5252"
            android:icon="@android:drawable/ic_menu_delete" />

        <item
            android:id="@+id/nav_item1"
            android:icon="@drawable/baseline_error_24"
            android:title="@string/nav_about" />

    </group>
</menu>
