<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_switch_to_pdfs"
            android:icon="@drawable/baseline_enhanced_encryption_24"
            android:title="@string/nav_switch_to_pdfs" />

        <item
            android:id="@+id/nav_check_clipboard"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/nav_check_clipboard" />

        <item
            android:id="@+id/nav_import_texts"
            android:icon="@drawable/ic_backup"
            android:title="@string/nav_import_texts" />

        <item
            android:id="@+id/nav_export_texts"
            android:icon="@drawable/ic_backup"
            android:title="@string/nav_export_texts" />

        <item
            android:id="@+id/nav_exit"
            android:icon="@android:drawable/ic_lock_power_off"
            android:title="@string/nav_exit" />

    </group>
</menu>
